# HPCC-htpasswd4classroom

./: .gitignore  CMakeLists.txt  README.md  htpasswd4ClassroomSecurity.cpp  htpasswd4ClassroomSecurity.hpp
ECL/: query_htpasswd_admin.ecl
configxml/: CMakeLists.txt  buildset.xml  genenvrules.conf  htpasswd_4_classroom_secmgr.xsd
prebuilt_packages/: htpasswd4ClassroomSecurity_hpcc_7.12.34_plugin_1.0.0_el8.3.x86_64.rpm  htpasswd4ClassroomSecurity_hpcc_7.12.34_plugin_1.0.0_focal_amd64.deb
